@@ -3,6 +3,9 @@ Overview of changes in lightdm 0.1.3
     * Make default user configuration per-display
     * Only automatically login the first time
     * Fix WebKit theme loading and automatic login
+    * Do cross fade for sessions that support it
+      (set X-LightDM-Supports-Transitions=true in their xsession file)
+    * Load user settings from ~/.dmrc
 
 Overview of changes in lightdm 0.1.2
 
